<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Mobile dev</string>
    <string name="sign_in_label">Sign in</string>
    <string name="sign_up_label">Sign up</string>
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="phone_label">Phone number</string>
    <string name="name_label">Name</string>
    <string name="password_wrong">Wrong password</string>
    <string name="min_length_password">Minimal length for password is 8</string>
    <string name="email_wrong">Wrong email</string>
    <string name="sign_in_failed_title">Sign in failed</string>
    <string name="sign_in_failed_message">Please check yor email and password</string>
    <string name="ok_label">OK</string>
    <string name="phone_wrong">Wrong phone</string>
    <string name="name_wrong">Wrong name</string>
    <string name="sign_up_failed_title">Sign up failed</string>
    <string name="sign_up_failed_message">Please try later</string>
    <string name="load">Load</string>
    <string name="welcome_label">Welcome</string>
    <string name="sign_out_label">Sign out</string>
    <string name="failed">Failed</string>
    <string name="save">Save</string>
    <string name="error_upload">Error upload</string>
    <string name="success_upload">Success upload</string>
    <string name="error_download">Error download</string>
    <string name="browser_label">Browser</string>
    <string name="creator_label">Creator</string>
    <string name="date_register_label">Date register</string>
    <string name="date_start_play_label">Date start play</string>
    <string name="status_label">Status</string>
    <string name="add_game">Add game</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>