<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddGameActivity">

    <ImageView
        android:id="@+id/imageView"
        android:src="@drawable/add_image"
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nameGame"
        android:text="@string/name_label"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textAlignment="textStart"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/edit_name_game"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView" />

    <EditText
        android:id="@+id/edit_name_game"
        android:textSize="16sp"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toEndOf="@id/nameGame"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/browserGame"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/browser_label"
        android:textSize="16sp"
        android:textAlignment="textStart"
        app:layout_constraintEnd_toStartOf="@id/edit_browser_game"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameGame" />


    <EditText
        android:id="@+id/edit_browser_game"
        android:textSize="16sp"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@id/nameGame"
        app:layout_constraintTop_toBottomOf="@id/nameGame"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/creatorGame"
        android:layout_width="120dp"
        android:textSize="18sp"
        android:textAlignment="textStart"
        android:text="@string/creator_label"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toStartOf="@id/edit_creator_game"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/browserGame" />

    <EditText
        android:id="@+id/edit_creator_game"
        android:textSize="16sp"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@id/nameGame"
        app:layout_constraintTop_toBottomOf="@id/browserGame"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/dateRegister"
        android:text="@string/date_register_label"
        android:textSize="18sp"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toStartOf="@id/edit_date_register"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/creatorGame" />
    <TextView
        android:id="@+id/edit_date_register"
        android:textSize="16sp"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@id/nameGame"
        app:layout_constraintTop_toBottomOf="@id/creatorGame"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/dateStartPlay"
        android:textSize="18sp"
        android:layout_width="120dp"
        android:text="@string/date_start_play_label"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toStartOf="@id/edit_date_start_play"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dateRegister" />
    <TextView
        android:id="@+id/edit_date_start_play"
        android:textSize="16sp"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@id/nameGame"
        app:layout_constraintTop_toBottomOf="@id/dateRegister"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:textSize="18sp"
        android:id="@+id/status"
        android:text="@string/status_label"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintEnd_toStartOf="@id/is_online"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dateStartPlay"  />

    <Spinner
        android:id="@+id/is_online"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@id/nameGame"
        app:layout_constraintTop_toBottomOf="@id/edit_date_start_play"
        app:layout_constraintEnd_toEndOf="parent"/>
    <Button
        android:text="@string/add_game"
        android:textColor="@color/white"
        android:id="@+id/add_game"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="119dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>